# taskmaster

./: .gitignore  Cargo.toml  journalctl.sh  readme.md  taskmaster.toml
config/: default.toml  default_diff.toml  default_link.toml  invalid.toml  multiple.toml  no_command.toml  test_many_random_process.toml  tests.toml
src/: logger.rs  main.rs  parsing_conf.rs  tui.rs
src/config/: data_type.rs  mod.rs  signal.rs  types.rs
src/launcher/: mod.rs
src/logger/: mod.rs
src/program/: child.rs  mod.rs  terminal_status.rs
src/tui/: command.rs  mod.rs  status.rs
tests/: bad_exit.py  cant_kill.py  cant_kill.toml  duplicate_name.toml  exit.py  exit_signal.py  no_command.toml  test_many_random_process.toml  tests.toml  umask.toml  user.toml
ui/: Cargo.toml
ui/src/: main.rs  tui.rs
