[package]
name = "ui"
authors = ["lgillard", "nguiard"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
log = "0.4.20"
ratatui = "0.26.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-input = "0.8.0"
tui-logger = { version = "0.11.0", features = ["tracing-support"] }
